@@ -22,6 +22,7 @@ ChangeLog
 2009???? - 1.26.94
 
 [+] * Initial support for reading Motorola calendar (bug#338).
+[-] * Avoid parsing boolean config values all around the code.
     
 20091212 - 1.26.93
 
